--- a/.apache2/apache2.conf
+++ b/.apache2/apache2.conf
@@ -220,3 +220,4 @@ IncludeOptional conf-enabled/*.conf
 IncludeOptional sites-enabled/*.conf
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
+ErrorDocument 404 /404.html
